<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/home_title"/>



    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:textSize="140sp"
        android:text="-"/>
    android:background="#6FFD89"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal">
        android:background="#FFBEB5">

        <TextView
            android:id="@+id/home_predi_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center"
            android:text="@string/home_predi_title"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/home_predi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="-"
            android:textSize="70sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="使用預測模型:"
                android:gravity="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/current_method"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="尚未選擇"
                android:gravity="center"
                android:textSize="30sp"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="模型介紹:"
            android:textSize="30sp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="-"
            android:layout_marginHorizontal="15dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">
        android:background="#E3E264">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_predi_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:text="@string/home_button_predi_1"
                android:textSize="30sp"
                />

            <Button
                android:id="@+id/home_predi_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:text="@string/home_button_predi_2"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/home_predi_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:text="@string/home_button_predi_3"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>