<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.chart.ChartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/chart_current_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:text="-"
            android:gravity="center"/>

        <TextView
            android:id="@+id/chart_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textSize="30dp"
            android:gravity="right"
            android:text="-(-%)"/>


    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/chart_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:textSize="20sp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/chart_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">



        <Button
            android:id="@+id/chart_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="日"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/chart_week"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="週"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/chart_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="月"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/chart_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="年"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chart_previous_close"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/chart_pre_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="30sp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chart_high"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/chart_high"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="30sp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chart_volume"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/chart_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="-"
                    android:textSize="30sp"
                    android:gravity="right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DB6654">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/chart_limitUp"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/chart_limitUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="30sp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/white"/>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chart_value"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/chart_open"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="30sp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chart_low"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/chart_low"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="30sp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chart_amplitude"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/chart_amplitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="30sp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CFA71">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/chart_limitDown"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/chart_limitDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="30sp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/black"/>


            </LinearLayout>





        </LinearLayout>








    </LinearLayout>






</LinearLayout>